--- a/src/styles/LoadingSpinner.css
+++ b/src/styles/LoadingSpinner.css
@@ -38,9 +38,9 @@
 .spinner {
   width: 50px;
   height: 50px;
-  border: 5px solid rgba(52, 152, 219, 0.2);
+  border: 5px solid rgba(233, 128, 116, 0.2);
   border-radius: 50%;
-  border-top-color: #3498db;
+  border-top-color: #E98074;
   animation: spin 1s linear infinite;
   margin-bottom: 15px;
 }
