--- a/src/styles/ProfileDropdown.css
+++ b/src/styles/ProfileDropdown.css
@@ -20,7 +20,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #3498db;
+  background-color: #E98074;
   color: white;
   display: flex;
   align-items: center;
@@ -88,15 +88,15 @@
 }
 
 .role-admin {
-  background-color: #e74c3c;
+  background-color: #E85A4F;
 }
 
 .role-security {
-  background-color: #2980b9;
+  background-color: #8E8D8A;
 }
 
 .role-user {
-  background-color: #27ae60;
+  background-color: #E98074;
 }
 
 .dropdown-divider {
